@@ -51,3 +51,5 @@ Initial release
 * Slightly faster response time for learned responses (.05 faster than normal) [pyborg.py]
 * Added a punctuation clean up regex for keys used in the learning system so we get better matches overall [pyborg.py]
 * Added the !responses command to show how many responses the bot has learned so far [pyborg.py]
+* Altered the auto-optimise function to only purge every day and rebuilddict every week to avoid db corruption [pyborg.py]
+* Changed the response times again and forced limit of 8 seconds for responses over 40 characters long [pyborg.py]
